Integrate Feign Clients V1.0 - Payroll Service